resources/assets/react/header/header.css
/* ... */
/* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
/* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
/*
@media screen and (-webkit-min-device-pixel-ratio:0) {
  @font-face {
    font-family: 'fontello';
    src: url('../font/fontello.svg?34568207#fontello') format('svg');
  }
}
*/
 
 [class^="icon-"]:before, [class*=" icon-"]:before {
  font-family: "fontello";
  font-style: normal;
  font-weight: normal;
  speak: none;
 
  display: inline-block;
  text-decoration: inherit;
  width: 1em;
  margin-right: .2em;
  text-align: center;
  /* opacity: .8; */
 
  /* For safety - reset parent styles, that can break glyph codes*/
  font-variant: normal;
  text-transform: none;
 
  /* fix buttons height, for twitter bootstrap */
  line-height: 1em;
 
  /* Animation center compensation - margins should be symmetric */
  /* remove if not needed */
  margin-left: .2em;
 
  /* you can be more comfortable with increased icons size */
  /* font-size: 120%; */
 
  /* Font smoothing. That was taken from TWBS */
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
 
  /* Uncomment for 3D effect */
  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
}
 
.icon-search:before { content: '\E800'; } /* '' */
.icon-cancel:before { content: '\E801'; } /* '' */
.icon-right-open:before { content: '\E802'; } /* '' */
.icon-left-open:before { content: '\E803'; } /* '' */
.icon-up-open:before { content: '\E804'; } /* '' */
.icon-down-open:before { content: '\E805'; } /* '' */
.icon-ok:before { content: '\E806'; } /* '' */
.icon-shuffle:before { content: '\E807'; } /* '' */
.icon-chat:before { content: '\E808'; } /* '' */
.icon-twitter:before { content: '\F099'; } /* '' */
.icon-facebook:before { content: '\F09A'; } /* '' */
.icon-menu:before { content: '\F0C9'; } /* '' */
.icon-pinterest-circled:before { content: '\F0D2'; } /* '' */
.icon-sort:before { content: '\F0DC'; } /* '' */
.icon-angle-left:before { content: '\F104'; } /* '' */
.icon-angle-right:before { content: '\F105'; } /* '' */
.icon-angle-up:before { content: '\F106'; } /* '' */
.icon-angle-down:before { content: '\F107'; } /* '' */
.icon-youtube-play:before { content: '\F16A'; } /* '' */
.icon-instagram:before { content: '\F16D'; } /* '' *//*
 * global
 */
/*
 * colors
 */
/*
 * typography
 */
/*
 * relative sizing
 */
/*
 * font-size for typography
 */
/*
 * incremental spacers by golden ratio
 */
/*
 * transitions
 */
/*
 * box-shadows
 */
/*
 * bootstrap 4 overrides
 */
/*
 * WordPress vars
 */
/*
 * Misc
 */
/** Bootstrap navbar fix (https://git.io/fADqW) */
/*
 * define bootstrap vars according to externally hosted bootstrap library
 */
/*
 * utilities
 */
.font-script {
  font-family: "bickham-script-pro-3", "clarendon-text-pro", Georgia, Times, "Times New Roman", serif; }

.utk-triangle {
  position: relative;
  background-color: #ff8200;
  text-align: left;
  font-size: 18px;
  display: none; }

.utk-triangle:before,
.utk-triangle:after {
  content: '';
  position: absolute;
  background-color: inherit; }

.utk-triangle,
.utk-triangle:before,
.utk-triangle:after {
  width: 1em;
  height: 1em;
  border-top-right-radius: 30%; }

.utk-triangle {
  transform: rotate(-60deg) skewX(-30deg) scale(1, 0.866); }

.utk-triangle:before {
  transform: rotate(-135deg) skewX(-45deg) scale(1.414, 0.707) translate(0, -50%); }

.utk-triangle:after {
  transform: rotate(135deg) skewY(-45deg) scale(0.707, 1.414) translate(50%); }

.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border: 0; }

.sr-only-focusable:active, .sr-only-focusable:focus {
  position: static;
  width: auto;
  height: auto;
  overflow: visible;
  clip: auto;
  white-space: normal; }

/*
 * layout
 */
html {
  margin-top: 129px;
  font-size: 18px;
  /* Mobile Devices for Mice */
  /* Landscape phones and down */
  /* Landscape phone to portrait tablet */
  /* Portrait tablet to landscape and desktop */
  /* desktop and large desktop */
  /* Mobile Devices for Mice */
  /* Landscape phones and down */
  /* Landscape phone to portrait tablet */
  /* Portrait tablet to landscape and desktop */
  /* desktop and large desktop */ }
  @media (min-width: 768px) and (max-width: 991px) {
    html {
      margin-top: 82px; } }
  @media (max-width: 767px) {
    html {
      margin-top: 66px; } }

* {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box; }

#placeholder {
  height: 400vh;
  width: 100vw; }

body {
  margin: 0;
  padding: 0;
  letter-spacing: -0.015em; }
  body.utk-menu-open {
    overflow: hidden; }
    body.utk-menu-open .utk-body-overlay {
      opacity: 0.76;
      height: 100%; }

.utk-body-overlay {
  background-color: #000000;
  width: 100%;
  height: 0;
  position: fixed;
  z-index: 99;
  left: 0;
  top: 0;
  opacity: 0;
  transition: opacity 290ms ease-in-out; }

#utk-header-trigger {
  width: 1px;
  height: 1px;
  position: absolute;
  left: 0;
  top: 400px; }

#utk-header-watch {
  width: 1px;
  height: 1px;
  position: fixed;
  left: 0;
  top: 170px; }

.utk-header-image {
  width: 100%;
  margin-top: 47px;
  height: 521px;
  overflow: hidden;
  background-color: #333;
  position: relative;
  transition: all 290ms ease-in-out; }
  .utk-header-image::after {
    position: absolute;
    display: block;
    content: ' ';
    width: 100%;
    height: 100%;
    left: 0;
    top: 0;
    z-index: 0;
    opacity: 1;
    background: -moz-linear-gradient(top, rgba(51, 51, 51, 0) 70%, rgba(88, 89, 91, 0.35) 100%);
    /* FF3.6-15 */
    background: -webkit-linear-gradient(top, rgba(51, 51, 51, 0) 70%, rgba(88, 89, 91, 0.35) 100%);
    /* Chrome10-25,Safari5.1-6 */
    background: linear-gradient(to bottom, rgba(51, 51, 51, 0) 70%, rgba(88, 89, 91, 0.35) 100%);
    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */ }
/* ... */

